# tsa2026

./: app.py  models.py  pyproject.toml  roadmap_data.py
.claude/: settings.local.json
instance/: stempathdb.sqlite3
static/css/: style.css
static/js/: main.js
templates/: base.html  career.html  dashboard.html  explore.html  index.html  login.html  quiz.html  register.html  results.html  roadmap.html  verify_email.html
