[project]
name = "stem-career-explorer"
version = "1.0.0"
description = "STEM Career Path Explorer — 2026 NJ TSA Coding Challenge"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-session>=0.8.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.scripts]
start = "flask:cli"
[tool.hatch.build.targets.wheel]
packages = ["."]